# mypopen-1

./: .travis.yml  CMakeLists.txt  Doxyfile
src/: mypopen.c  mypopen.h
tests/: utils.c  utils.h
tests/libpopentest/: Makefile  checkopenfds.c  doxygen-data.h  global.mak  killparent.c  mypopen.h  popentest.c  utils.c  utils.h
tests/sandbox/: sandbox.c
tests/test-pipe/: test-pipe.c
